@@ -2,12 +2,12 @@
 <configuration>
   <system.data>
     <DbProviderFactories>
-      <clear/>
-      <add name="MySql" invariant="MySql.Data.MySqlClient" description="boo" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data"/>
+      <clear />
+      <add name="MySql" invariant="MySql.Data.MySqlClient" description="boo" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
     </DbProviderFactories>
   </system.data>
-
   <connectionStrings>
     <add name="testEntities" connectionString="metadata=res://*/TestModel.csdl|res://*/TestModel.ssdl|res://*/TestModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;Data Source=localhost;database=test;uid=root;pooling=false&quot;" providerName="System.Data.EntityClient" />
+    <add name="model2Entities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=juliotests&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
